RESOLVED FIXED95036
Prerenderering should gracefully handle no PrerendererClient or PrerenderingPlatform being provided.
https://bugs.webkit.org/show_bug.cgi?id=95036
Summary Prerenderering should gracefully handle no PrerendererClient or PrerenderingP...
Gavin Peters
Reported 2012-08-26 12:08:07 PDT
Prerenderering should gracefully handle no PrerendererClient or PrerenderingPlatform being provided.
Attachments
Patch (4.32 KB, patch)
2012-08-26 12:11 PDT, Gavin Peters
no flags
Patch (4.46 KB, patch)
2012-08-26 14:32 PDT, Gavin Peters
no flags
Gavin Peters
Comment 1 2012-08-26 12:11:39 PDT
Gavin Peters
Comment 2 2012-08-26 12:13:50 PDT
Comment on attachment 160610 [details] Patch abarth, WDYT?
Adam Barth
Comment 3 2012-08-26 12:46:21 PDT
Comment on attachment 160610 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=160610&action=review > Source/WebCore/loader/Prerenderer.cpp:140 > - if (!m_client) > + if (!m_initializedClient) { > + m_initializedClient = true; > m_client = PrerendererClient::from(document()->page()); > + } > return m_client; Should we just do this in the constructor? I don't remember the exactly access sequence for these objects.
Gavin Peters
Comment 4 2012-08-26 14:25:55 PDT
(In reply to comment #3) > (From update of attachment 160610 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=160610&action=review > > > Source/WebCore/loader/Prerenderer.cpp:140 > > - if (!m_client) > > + if (!m_initializedClient) { > > + m_initializedClient = true; > > m_client = PrerendererClient::from(document()->page()); > > + } > > return m_client; > > Should we just do this in the constructor? I don't remember the exactly access sequence for these objects. The problem is that the client isn't provided until that platform initializes, which can be later. When I did it in the constructor, I had crashes. So I think this logic at a minimum needs to be commented.
Gavin Peters
Comment 5 2012-08-26 14:32:10 PDT
WebKit Review Bot
Comment 6 2012-08-26 15:15:14 PDT
Comment on attachment 160615 [details] Patch Clearing flags on attachment: 160615 Committed r126714: <http://trac.webkit.org/changeset/126714>
WebKit Review Bot
Comment 7 2012-08-26 15:15:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.