Prerenderering should gracefully handle no PrerendererClient or PrerenderingPlatform being provided. https://bugs.webkit.org/show_bug.cgi?id=95036

Reviewed by Adam Barth.

Some assertions made sure there was a prerendering platform and client, and this change should make prerendering just be a NOP when no platform is provided, and just continue without a client when there is no client provided. These assertions were causing crashes in chromium's content_shell target, and really for no good reason.

No new tests, because DumpRenderTree provides both a PrerenderingPlatform and a PrerendererClient. But there is a new layout test in chromium's WebKitBrowserTest for this behaviour, see http://codereview.chromium.org/10869068/

* loader/Prerenderer.cpp:
(WebCore::Prerenderer::Prerenderer):
(WebCore::Prerenderer::render):
(WebCore::Prerenderer::client):
* loader/Prerenderer.h:
* loader/PrerendererClient.cpp:
(WebCore::PrerendererClient::from):
* platform/chromium/Prerender.cpp:
(WebCore::Prerender::cancel):


git-svn-id: svn://svn.chromium.org/blink/trunk@126714 bbb929c8-8fbe-4397-9dbb-9b2b20218538