third_party/WebKit/Source/WebCore/loader/Prerenderer.h
@@ -74,6 +74,7 @@ private:
     Document* document();
     PrerendererClient* client();
 
+    bool m_initializedClient;
     PrerendererClient* m_client;
     HandleVector m_activeHandles;
     HandleVector m_suspendedHandles;
