third_party/WebKit/Source/WebCore/platform/chromium/Prerender.cpp
@@ -66,7 +66,6 @@ void Prerender::add()
 
 void Prerender::cancel()
 {
-    ASSERT(WebKit::WebPrerenderingSupport::current());
     WebKit::WebPrerenderingSupport* platform = WebKit::WebPrerenderingSupport::current();
     if (!platform)
         return;
